@@ -1,14 +1,10 @@
 Plan
 ----
-* DONE - Rename package to pyrtfng.
-* DONE - Clean up basic white space issues (mixed tab/space, file encodings,
-    DOS characters, etc.)
-* DONE - Increment to version 0.9.0
 
 * Migrate examples to unit tests.
-* Add prototype parsing code and test sources.
-* Move exceptions out of parser code into dedicated exceptions file.
-* Split grammar out of parser base and into its own module.
+* DONE - Add prototype parsing code and test sources.
+* DONE - Move exceptions out of parser code into dedicated exceptions file.
+* DONE - Split grammar out of parser base and into its own module.
 * Increment to version 0.9.1
 
 * Rename varaibles to remove underscores (convert to camelCase).
@@ -67,6 +63,11 @@ Plan
 
 Completed
 ---------
+
+* DONE - Rename package to pyrtfng.
+* DONE - Clean up basic white space issues (mixed tab/space, file encodings,
+    DOS characters, etc.)
+* DONE - Increment to version 0.9.0
 
 
 Issues
